# pegasocks-android

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/mokhtarabadi/pegasocks/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: config.json
app/src/main/cpp/: CMakeLists.txt  README.md  native-lib.cpp  native.cpp
app/src/main/cpp/prebuilt/: pegas.h  tun2socks.h
app/src/main/cpp/prebuilt/include/x86/event2/: event-config.h
app/src/main/cpp/prebuilt/include/x86_64/event2/: event-config.h
app/src/main/java/com/mokhtarabadi/pegasocks/: EditConfigActivity.java  MainActivity.java  MainNative.java  MainService.java
app/src/main/res/layout/: activity_edit_config.xml  activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/mokhtarabadi/pegasocks/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
